--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
            <li class="menulink">
                <a href="#">HANOI-APTECH</a>
                <ul class="menu2">
-                   <li><a href="#">Giới thiệu</a></li>
+                   <li><a href="gioithieu.html">Giới thiệu</a></li>
                    <li><a href="#">Cơ sở vật chất</a></li>
                    <li><a href="#">Giảng viên</a></li>
                    <li><a href="#">Hỏi đáp</a></li>
