--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
            <li class="menulink">
                <a href="#">CHƯƠNG TRÌNH ĐÀO TẠO</a>
                <ul class="menu2">
-                   <li><a href="#">Lập Trình Viên Quốc Tế ADSE</a></li>
+                   <li><a href="laptrinhvienquote.html">Lập Trình Viên Quốc Tế ADSE</a></li>
                    <li><a href="#">Lập Trình Web FullStack</a></li>
                    <li><a href="#">Các khóa ngắn hạn</a></li>
                </ul>
