--- a/laptrinhvienquote.html
+++ b/laptrinhvienquote.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="logo"><img src="img/log.png" alt=""></div>
     <ul class="menu">
-        <li><a href="#">TRANG CHỦ</a></li>
+        <li><a href="index2.html">TRANG CHỦ</a></li>
         <li class="menulink">
             <a href="#">HANOI-APTECH</a>
             <ul class="menu2">
@@ -67,7 +67,7 @@
 </div>
 <div class="input">
     <h1>
-        
+
         <input type="text" value placeholder="Họ và tên">
     </h1>
     <h1>
