--- a/BTTH06/btth06.html
+++ b/BTTH06/btth06.html
@@ -13,7 +13,10 @@
     <table class="table">
         <tr>
             <th id="time"></th>
-            <th id="thongbao"></th>
+            <th id="abc">
+                <div id="thongbao"></div>
+            </th>
+
         </tr>
     </table>
     <script src="js/btth06.js">
